# clify

./: pyproject.toml
src/clify/: __init__.py
src/clify/cli/: root.py  spotify.py
src/clify/clients/: auth.py  spotify_api.py
src/clify/common/: config.py  logger.py  logic.py  utils.py
src/clify/models/: client_info.py
src/spotcli/cli/: root.py  spotify.py
src/spotcli/clients/: auth.py  http_server.py  spotify_api.py
src/spotcli/common/: config.py  logic.py
src/spotcli/models/: client_info.py
